[project]
name = "newsgeni"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "httpx>=0.27.2",
    "ipython>=9.13.0",
    "langchain-anthropic>=1.4.3",
    "langchain-core>=1.4.0",
    "langchain-tools>=0.1.34",
    "langgraph>=1.2.0",
    "loadenv>=0.1.1",
    "pydantic>=2.13.4",
    "streamlit>=1.57.0",
    "tavily>=1.1.0",
    "typing-extensions>=4.15.0",
]
